welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:17: error: reassignment to val
} while (croisement=true) 
                   ^